Use TransactionTemplate for PackagedMedicinalProduct