@@ -12,14 +12,15 @@ import it.datawizard.unicom.unicombackend.jpa.entity.PackageItem;
 import it.datawizard.unicom.unicombackend.jpa.entity.PackagedMedicinalProduct;
 import it.datawizard.unicom.unicombackend.jpa.entity.edqm.EdqmPackageItemType;
 import it.datawizard.unicom.unicombackend.jpa.repository.PackagedMedicinalProductRepository;
-import org.hibernate.Hibernate;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r5.model.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import javax.annotation.Nonnull;
 import java.util.ArrayList;
@@ -31,12 +32,15 @@ import java.util.stream.Collectors;
 @Component
 public class PackagedProductDefinitionResourceProvider implements IResourceProvider {
     private final PackagedMedicinalProductRepository packagedMedicinalProductRepository;
+    private final PlatformTransactionManager platformTransactionManager;
+    private final TransactionTemplate transactionTemplate;
 
     @Autowired
-    public PackagedProductDefinitionResourceProvider(PackagedMedicinalProductRepository packagedMedicinalProductRepository) {
+    public PackagedProductDefinitionResourceProvider(PackagedMedicinalProductRepository packagedMedicinalProductRepository, PlatformTransactionManager platformTransactionManager) {
         this.packagedMedicinalProductRepository = packagedMedicinalProductRepository;
+        this.platformTransactionManager = platformTransactionManager;
+        this.transactionTemplate = new TransactionTemplate(this.platformTransactionManager);
     }
-
 
     @Override
     public Class<? extends IBaseResource> getResourceType() {
@@ -50,15 +54,6 @@ public class PackagedProductDefinitionResourceProvider implements IResourceProvi
         return result.map(PackagedProductDefinitionResourceProvider::packagedProductDefinitionFromEntity).orElse(null);
     }
 
-//    @Search
-//    @Transactional
-//    public List<PackagedProductDefinition> findAllResources() {
-//        ArrayList<PackagedProductDefinition> resources = new ArrayList<>();
-//        for (PackagedMedicinalProduct packagedMedicinalProduct: packagedMedicinalProductRepository.findAll()) {
-//            resources.add(packagedProductDefinitionFromEntity(packagedMedicinalProduct));
-//        }
-//        return resources;
-//    }
     @Search
     @Transactional
     public IBundleProvider findAllResources() {
@@ -74,11 +69,21 @@ public class PackagedProductDefinitionResourceProvider implements IResourceProvi
             @Nonnull
             @Override
             public List<IBaseResource> getResources(int theFromIndex, int theToIndex) {
-                int pageSize = theToIndex-theFromIndex;
-                int currentPageIndex = theFromIndex/pageSize;
-                Page<PackagedMedicinalProduct> allPackagedMedicinalProducts = packagedMedicinalProductRepository.findAll(PageRequest.of(currentPageIndex,pageSize));
-                return allPackagedMedicinalProducts.stream()
-                        .map(PackagedProductDefinitionResourceProvider::packagedProductDefinitionFromEntity).collect(Collectors.toList());
+                final int pageSize = theToIndex-theFromIndex;
+                final int currentPageIndex = theFromIndex/pageSize;
+
+                final List<IBaseResource> results = new ArrayList<>();
+
+                transactionTemplate.execute(status -> {
+                    Page<PackagedMedicinalProduct> allPackagedMedicinalProducts = packagedMedicinalProductRepository
+                            .findAll(PageRequest.of(currentPageIndex,pageSize));
+                    results.addAll(allPackagedMedicinalProducts.stream()
+                            .map(PackagedProductDefinitionResourceProvider::packagedProductDefinitionFromEntity)
+                            .toList());
+                    return null;
+                });
+
+                return results;
             }
 
             @Override
@@ -172,7 +177,10 @@ public class PackagedProductDefinitionResourceProvider implements IResourceProvi
         }
 
         // Quantity
-        fhirPackage.setQuantity(packageItemEntity.getPackageItemQuantity());
+        Integer packageItemQuantity = packageItemEntity.getPackageItemQuantity();
+        if (packageItemQuantity != null) {
+            fhirPackage.setQuantity(packageItemQuantity);
+        }
 
         // Inner packages
         fhirPackage.setPackage(
